Muchas guarradas arregladas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,6 +111,9 @@
     <string name="succ_edit">Ad successfully updated</string>
     <string name="succ_upload">Ad successfully uploaded</string>
     <string name="please_add_photo">Plase, add at least 1 photo</string>
+    <string name="changing_pass">Changing your password...</string>
+    <string name="changing_title">Change your password</string>
+    <string name="settings_title">Settings</string>
 
     <!-- Navigation Drawer -->
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -232,7 +235,7 @@
     <string name="title_activity_password_change">PasswordChange</string>
     <string name="change_password_hint_old_password">Old Password</string>
     <string name="change_password_hint_new_password">New Password</string>
-    <string name="change_password_hint_repite_new_password">Repite Password</string>
+    <string name="change_password_hint_repeat_new_password">Repeat Password</string>
     <string name="password_change_error_password_empty">Fields cannot be empty</string>
     <string name="change_password_error_password_missmatch">Passwords do not match</string>
     <string name="change_password_error_incorrect_password">Incorrect Password</string>
