--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,7 +111,7 @@
     <string name="change">Change</string>
     <string name="succ_edit">Ad successfully updated</string>
     <string name="succ_upload">Ad successfully uploaded</string>
-    <string name="please_add_photo">Plase, add at least 1 photo</string>
+    <string name="please_add_photo">Please, add at least 1 photo</string>
     <string name="settings_title">Settings</string>
 
     <!-- Navigation Drawer -->
