--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,6 +113,7 @@
     <string name="succ_upload">Ad successfully uploaded</string>
     <string name="please_add_photo">Please, add at least 1 photo</string>
     <string name="settings_title">Settings</string>
+    <string name="creating_user">Please wait, creating user...</string>
 
     <!-- Navigation Drawer -->
     <string name="navigation_drawer_open">Open navigation drawer</string>
